--- a/style.scss
+++ b/style.scss
@@ -1,57 +1,157 @@
 @use './reset';
 
 :root {
-  --brk-mobile: 375px;
+  --clr-primary: hsl(215, 51%, 70%);
+  --clr-accent: hsl(178, 100%, 50%);
 
-  /* Colors */
-  --clr-white: hsl(0, 0%, 100%);
-  --clr-light: hsl(212, 45%, 89%);
-  --clr-grayblue: hsl(220, 15%, 55%);
-  --clr-dark: hsl(218, 44%, 22%);
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-neutral-500: hsl(215, 32%, 27%);
+  --clr-neutral-700: hsl(216, 50%, 16%);
+  --clr-neutral-900: hsl(217, 54%, 11%);
 
-  /* Typography */
-  --fs-body: 15px;
-  --ff: 'Outfit', sans-serif;
-  --fw-normal: 400;
-  --fw-bold: 700;
+  --fs-body: 1.125rem;
+  --ff-body: 'Outfit', system-ui, sans-serif;
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-600: 600;
+}
+
+html,
+body {
+  height: unset;
 }
 
 body {
   display: grid;
-  place-content: center;
-  height: 100vh;
-  background-color: var(--clr-light);
+  place-items: center;
+  min-height: 100vh;
   font-size: var(--fs-body);
-  font-family: var(--ff);
-  color: var(--clr-grayblue);
+  font-family: var(--ff-body);
+  font-weight: var(--fw-300);
+  background-color: var(--clr-neutral-900);
+  color: var(--clr-primary);
+  padding: 1.5rem;
 }
 
-h2 {
-  font-size: 1.5rem;
-  font-weight: var(--fw-bold);
-  color: var(--clr-dark);
-  margin-bottom: 1rem;
+a {
+  color: var(--clr-neutral-100);
+  cursor: pointer;
+  text-decoration: none;
+  transition: color 250ms ease;
+
+  &:is(:hover, :focus) {
+    color: var(--clr-accent);
+  }
 }
 
 .card {
-  width: min(calc(var(--brk-mobile) - 2rem), calc(100% - 2rem));
-  margin-inline: auto;
+  display: grid;
+  max-width: 500px;
+  padding: 1.5rem;
+  gap: 1rem;
+  border-radius: 1rem;
+  background-color: var(--clr-neutral-700);
 
-  background-color: var(--clr-white);
+  &__img-wrapper {
+    position: relative;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    cursor: pointer;
 
-  --inner-radius: 8px;
-  --padding: 1rem;
+    & > img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-  padding: var(--padding);
-  border-radius: calc(var(--inner-radius) + var(--padding));;
 
-  text-align: center;
+    transition: opacity 250ms ease;
 
-  &__img {
-    border-radius: calc(var(--inner-radius));
+    &::before, &::after {
+      position: absolute;
+      inset: 0;
+      opacity: 0;
+      transition: inherit;
+    }
+
+    &::before {
+      content: '';
+      background-color: var(--clr-accent);
+    }
+
+    &::after {
+      content: url('./images/icon-view.svg');
+      display: grid;
+      place-content: center;
+    }
+
+    &:hover {
+      &::before {
+        opacity: .4;
+      }
+      &::after {
+        opacity: 1;
+      }
+    }
   }
 
-  &__content {
-    padding: 1.2rem;
+  &__title {
+    font-weight: var(--fw-600);
+    color: var(--clr-neutral-100);
+  }
+
+  &__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  &__price {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    color: var(--clr-accent);
+    font-weight: var(--fw-400);
+
+    &::before {
+      content: url('./images/icon-ethereum.svg');
+      width: 11px;
+      height: 18px;
+      margin-block-end: 2px;
+    }
+  }
+
+  &__time-left {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+
+    &::before {
+      content: url('./images/icon-clock.svg');
+      width: 17px;
+      height: 17px;
+      margin-block-end: 4px;
+    }
+  }
+
+  &__divider {
+    border-color: var(--clr-neutral-500);
+  }
+
+  &__attribution {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 1rem;
+  }
+
+  &__avatar {
+    width: 2rem;
+    height: 2rem;
+    border: 1px solid var(--clr-neutral-100);
+    border-radius: 50%;
+  }
+
+  &__author {
+    color: var(--clr-neutral-100);
   }
 }
